# ty-backend-admin

./: .env.template  Cargo.toml
database/: activities.sql  activities_prices.sql  build_script.txt  cities.sql  clients.sql  common_domains.sql  dealerships.sql  discounts.sql  invoices.sql  offered_services.sql  orders.sql  orders_details.sql  payments.sql  products.sql  products_applications.sql  recommended_services.sql  roles.sql  services.sql  specializations.sql  staff.sql  stock.sql  supply_lines.sql  vehicle_models.sql  vehicles.sql
database/domains/: email.sql  national_id.sql  phone_no.sql  rif.sql  telephone_no.sql
database/fishy/: fishy_constraint.sql
database/tables/: activities.sql  cities.sql  clients.sql  dealerships.sql  discounts.sql  invoices.sql  managers.sql  operatives.sql  orders.sql  payments.sql  products_applications.sql  roles.sql  services.sql  specializations.sql  staff.sql  states.sql  vehicles.sql
database/triggers/: trigger_check_employee_is_manager.sql  trigger_check_employee_is_operative.sql  trigger_delete_dealership_set_manager_dealership_to_null.sql  trigger_generate_invoice.sql  trigger_insert_dealership_into_order.sql  trigger_update_manager_in_dealerships_not_null.sql  trigger_update_stock.sql
src/: main.rs  models.rs  services.rs  utils.rs  views.rs
src/models/: activity.rs  activity_price.rs  city.rs  client.rs  dealership.rs  discount.rs  employee.rs  invoice.rs  pagination.rs  payment.rs  product.rs  role.rs  service.rs  state.rs  stock_item.rs  supply_line.rs  vehicle.rs  vehicle_model.rs
src/services/: cities.rs  (+31 more)
(+14 files in other folders)
