[package]
name = "ty-backend-admin"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
anyhow = "1.0.71"
async-trait = "0.1.71"
bigdecimal = { version = "0.3.1", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_with = "3.0.0"
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio", "bigdecimal", "time"] }
thiserror = "1.0.43"
time = { version = "0.3.23", features = ["serde-human-readable", "macros"] }
tracing-actix-web = "0.7.5"